--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 4173"
+    "preview": "vite preview --port 4173",
+    "backend": "json-server --watch db/db.json"
   },
   "dependencies": {
+    "json-server": "^0.17.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
